<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <View
        android:id="@+id/saved_recs"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@drawable/saved_recs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewSubtractSurfQuest"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/lato_medium"
        android:text="@string/subtractQuestion"
        android:textAlignment="center"
        android:textColor="#313131"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/saved_recs"
        app:layout_constraintEnd_toEndOf="@+id/saved_recs"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/saved_recs"
        app:layout_constraintTop_toTopOf="@+id/saved_recs"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnSubtractNo"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/recs_btns"
        android:fontFamily="@font/lato_bold"
        android:text="@string/noSubButton"
        android:textColor="#fff"
        android:textSize="16dp"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/saved_recs"
        app:layout_constraintEnd_toEndOf="@+id/saved_recs"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/saved_recs"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnSurfSave"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/recs_btns"
        android:fontFamily="@font/lato_bold"
        android:text="@string/yesSubButton"
        android:textColor="#fff"
        android:textSize="16dp"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/saved_recs"
        app:layout_constraintEnd_toEndOf="@+id/saved_recs"
        app:layout_constraintStart_toEndOf="@+id/btnSurfOK"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="(eg. doors or windows)"
        android:fontFamily="@font/lato_light"
        android:textSize="14dp"
        android:textColor="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSubtractSurfQuest" />

</androidx.constraintlayout.widget.ConstraintLayout>