<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:color="#1AFFFFFF">

    <View
        android:id="@+id/saved_recs"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:background="@drawable/saved_recs"
        android:color="#1AFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="145dp"
        android:fontFamily="@font/lato_black"
        android:text="PAINT CALCULATOR"
        android:textColor="#313131"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/saved_recs"
        app:layout_constraintEnd_toEndOf="@+id/saved_recs"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/saved_recs"
        app:layout_constraintTop_toTopOf="@+id/saved_recs"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/calcTextViewHowAbsorb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="209dp"
        android:fontFamily="@font/lato_medium"
        android:text="@string/surfaceValue"
        android:textColor="#323232"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/saved_recs"
        app:layout_constraintEnd_toEndOf="@+id/saved_recs"
        app:layout_constraintStart_toStartOf="@+id/saved_recs"
        app:layout_constraintTop_toTopOf="@+id/saved_recs" />


    <EditText
        android:id="@+id/editTextGivenSurface"
        android:layout_width="229dp"
        android:layout_height="24dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="182dp"
        android:autofillHints=""
        android:background="@drawable/save_etrecname"
        android:fontFamily="@font/lato_medium"
        android:hint="@string/m2"
        android:inputType="numberDecimal"
        android:paddingStart="5dp"
        android:textAlignment="center"
        android:textColor="#323232"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/saved_recs"
        app:layout_constraintEnd_toEndOf="@+id/saved_recs"
        app:layout_constraintStart_toStartOf="@+id/saved_recs"
        app:layout_constraintTop_toTopOf="@+id/saved_recs" />


    <TextView
        android:id="@+id/calcTextViewNumbOfLayers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="155dp"
        android:fontFamily="@font/lato_medium"
        android:text="@string/numbOfLay"
        android:textColor="#323232"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/saved_recs"
        app:layout_constraintEnd_toEndOf="@+id/saved_recs"
        app:layout_constraintStart_toStartOf="@+id/saved_recs"
        app:layout_constraintTop_toTopOf="@+id/saved_recs" />

    <Button
        android:id="@+id/buttonSub"
        android:layout_width="30dp"
        android:layout_height="34dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="239dp"
        android:layout_marginBottom="128dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/lato_black"
        android:text="-"
        android:textAlignment="center"
        android:textColor="#323232"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/saved_recs"
        app:layout_constraintEnd_toEndOf="@+id/saved_recs"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="@+id/saved_recs"
        app:layout_constraintTop_toTopOf="@+id/saved_recs"
        app:layout_constraintVertical_bias="0.505" />

    <TextView
        android:id="@+id/calcTextViewLayers"
        android:layout_width="193dp"
        android:layout_height="24dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="128dp"
        android:background="#FFFFFF"
        android:fontFamily="@font/lato_medium"
        android:padding="1dp"
        android:text="1"
        android:textAlignment="center"
        android:textColor="#323232"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/saved_recs"
        app:layout_constraintEnd_toEndOf="@+id/saved_recs"
        app:layout_constraintStart_toStartOf="@+id/saved_recs"
        app:layout_constraintTop_toTopOf="@+id/saved_recs" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="30dp"
        android:layout_height="34dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="128dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/lato_black"
        android:text="+"
        android:textAlignment="center"
        android:textColor="#323232"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/saved_recs"
        app:layout_constraintEnd_toEndOf="@+id/saved_recs"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toStartOf="@+id/saved_recs"
        app:layout_constraintTop_toTopOf="@+id/saved_recs"
        app:layout_constraintVertical_bias="0.505" />

    <TextView
        android:id="@+id/calcTextViewPaintEff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="139dp"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/lato_medium"
        android:text="@string/paintEff"
        android:textAlignment="textStart"
        android:textColor="#323232"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/saved_recs"
        app:layout_constraintEnd_toEndOf="@+id/saved_recs"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/saved_recs"
        app:layout_constraintTop_toTopOf="@+id/saved_recs"
        app:layout_constraintVertical_bias="0.378" />

    <EditText
        android:id="@+id/editTextPaintEff"
        android:layout_width="229dp"
        android:layout_height="24dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="169dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="78dp"
        android:autofillHints=""
        android:background="@drawable/save_etrecname"
        android:fontFamily="@font/lato_medium"
        android:hint="@string/m2l"
        android:inputType="numberDecimal"
        android:paddingStart="5dp"
        android:textAlignment="center"
        android:textColor="#323232"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/saved_recs"
        app:layout_constraintEnd_toEndOf="@+id/saved_recs"
        app:layout_constraintStart_toStartOf="@+id/saved_recs"
        app:layout_constraintTop_toTopOf="@+id/saved_recs" />

    <TextView
        android:id="@+id/respond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="55dp"
        android:fontFamily="@font/lato_medium"
        android:textAlignment="textStart"
        android:textColor="#323232"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/saved_recs"
        app:layout_constraintEnd_toEndOf="@+id/saved_recs"
        app:layout_constraintStart_toStartOf="@+id/saved_recs"
        app:layout_constraintTop_toTopOf="@+id/saved_recs"
        app:layout_constraintVertical_bias="0.52" />

    <Button
        android:id="@+id/buttonCalculatorExit"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="26dp"
        android:background="@drawable/recs_btns"
        android:fontFamily="@font/lato_bold"
        android:text="@string/calculatorExit"
        android:textColor="#fff"
        android:textSize="16dp"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/saved_recs"
        app:layout_constraintEnd_toEndOf="@+id/saved_recs"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="@+id/saved_recs"
        app:layout_constraintTop_toTopOf="@+id/saved_recs"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonCalculator"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="26dp"
        android:background="@drawable/recs_btns"
        android:fontFamily="@font/lato_bold"
        android:text="CALCULATE"
        android:textColor="#fff"
        android:textSize="16dp"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/saved_recs"
        app:layout_constraintEnd_toEndOf="@+id/saved_recs"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/saved_recs"
        app:layout_constraintTop_toTopOf="@+id/saved_recs"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/excPaint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="45dp"
        android:fontFamily="@font/lato"
        android:text="(incl. 10% of excess paint)"
        android:textColor="#000000"
        android:textSize="8sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/saved_recs"
        app:layout_constraintEnd_toEndOf="@+id/saved_recs"
        app:layout_constraintStart_toStartOf="@+id/saved_recs"
        app:layout_constraintTop_toBottomOf="@+id/respond"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>